# pixelblaze-claude

./: .env.example  .gitignore  CLAUDE.md  PATTERNS.md  README.md  pyproject.toml
patterns/: 01-strobe-front-to-back.js  02-breathing-cascade.js  03-spectrum-rotate.js  04-meteor-shower.js  05-ocean-waves.js  06-aurora-borealis.js  07-fire.js  08-thunderstorm.js  09-rain-on-glass.js  10-lava-lamp.js  11-color-strobe.js  12-plasma.js  13-fireflies.js  14-pendulum-wave.js  15-glitch.js  16-dna-helix.js  17-comet.js  18-heartbeat.js  19-prism.js  20-sparkle-rain.js  21-aurora-australis.js  22-bouncing-balls.js
scripts/: fetch_docs.py
src/pixelblaze_mcp/: config.py  docs_tools.py  pixelblaze_tools.py  server.py
